# CG_Experiments

./: .gitignore  CMakeLists.txt  Makefile  OBJImporter.cpp  OBJImporter.h  README.md  WINDOWS_RUN_ME.txt  build_windows.bat  gl_headers.h  main.cpp  prepare_submission.sh  test
.github/workflows/: windows-build.yml
